--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
   <!-- HERO with your uploaded image -->
   <section class="hero">
     <!-- IMPORTANT: shyira EIDS5199.JPG muri folder /images/ ya repo -->
-    <img src="./images/EIDS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="1200" />
+    <img src="EIDS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="1200" />
     <div class="overlay">
       <h1>United for our future</h1>
       <p>Tuzigama, dufashanye, dukura hamwe.</p>
