--- a/home.html
+++ b/home.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rw">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Les NGANYIRA — Home</title>
   <link rel="stylesheet" href="style.css"/>
   <style>
-    /* Extra styles for hero & cards */
-    .hero {
-      position: relative;
-      width: 100%;
-      max-width: 1100px;
-      margin: 8px auto 0;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,.08);
-      background: #000; color: #fff;
-    }
-    .hero img {
-      width: 100%; height: 260px; object-fit: cover; opacity: .85; display: block;
-    }
-    .overlay {
-      position: absolute; inset: 0; display: flex; flex-direction: column; justify-content: flex-end;
-      padding: 18px; background: linear-gradient(180deg, rgba(0,0,0,0) 40%, rgba(0,0,0,.45) 100%);
-    }
+    /* Hero & cards */
+    .hero { position: relative; width: 100%; max-width: 1100px; margin: 8px auto 0;
+      border-radius: 16px; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,.08);
+      background: #000; color: #fff; }
+    .hero img { width: 100%; height: 260px; object-fit: cover; opacity: .85; display: block; }
+    .overlay { position: absolute; inset: 0; display: flex; flex-direction: column; justify-content: flex-end;
+      padding: 18px; background: linear-gradient(180deg, rgba(0,0,0,0) 40%, rgba(0,0,0,.45) 100%); }
     .overlay h1 { margin: 0 0 6px; font-size: 26px; }
     .overlay p  { margin: 0 0 10px; color: #e5e7eb; }
     .btn-row { display: flex; gap: 8px; }
@@ -34,136 +23,16 @@
     .card { background: #fff; border: 1px solid #eef1f7; border-radius: 14px; padding: 14px; }
     table.simple { width:100%; border-collapse:collapse; }
     table.simple th, table.simple td { padding:8px; border-bottom:1px solid #eef1f7; text-align:left; }
+
+    /* Language switch */
+    .lang-select { padding: 8px 10px; border-radius: 8px; border: 1px solid #d8deea; background: #fff; }
   </style>
 </head>
 <body>
   <!-- NAV -->
   <header class="nav">
-    <div class="nav-left">Les NGANYIRA</div>
+    <div class="nav-left" data-i18n="brand">Les NGANYIRA</div>
     <nav class="nav-right">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contribute.html">Make a Contribution</a>
-      <a href="terms.html">Terms & Policies</a>
-      <button id="logoutBtn" class="nav-btn">Log out</button>
-    </nav>
-  </header>
-
-  <!-- HERO with your uploaded image -->
-  <section class="hero">
-    <!-- IMPORTANT: shyira EIDS5199.JPG muri folder /images/ ya repo -->
-    <img src="EIDS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="1200" />
-    <div class="overlay">
-      <h1>United for our future</h1>
-      <p>Tuzigama, dufashanye, dukura hamwe.</p>
-      <div class="btn-row">
-        <a href="contribute.html" class="btn">Make a Contribution</a>
-        <a href="services.html" class="btn secondary">See Services</a>
-      </div>
-    </div>
-  </section>
-
-  <div class="auth-card" style="margin-top:16px;">
-    <!-- Quick intro & stats -->
-    <div class="quick">
-      <div class="card">
-        <h2>Welcome</h2>
-        <p id="welcomeTxt" class="muted"></p>
-      </div>
-      <div class="card">
-        <h2>Your quick stats</h2>
-        <div class="muted"><small>Total contributions (CAD)</small></div>
-        <div id="totalCad" style="font-size:20px;font-weight:700;">0.00</div>
-        <div class="muted" style="margin-top:6px;"><small>Entries: <span id="totalCount">0</span></small></div>
-      </div>
-      <div class="card">
-        <h2>Announcements</h2>
-        <ul class="muted" style="margin:6px 0 0 18px;">
-          <li>Monthly saving reminder: 25th.</li>
-          <li>Family call — Sunday 7pm Kigali time.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Recent contributions -->
-    <div class="card" style="margin-top:12px;">
-      <h2>Recent contributions</h2>
-      <div id="recentList" class="muted">No contributions yet. <a href="contribute.html">Add one →</a></div>
-    </div>
-  </div>
-
-  <script>
-    // ===== Auth guard =====
-    function getUsers(){ try { return JSON.parse(localStorage.getItem("lng_users")||"{}"); } catch { return {}; } }
-    function getContribs(){ try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; } }
-
-    const email = localStorage.getItem("lng_current_user");
-    if (!email) { window.location.href = "index.html"; }
-
-    const users = getUsers();
-    const me = users[email];
-    if (!me) {
-      localStorage.removeItem("lng_current_user");
-      localStorage.removeItem("lng_remember");
-      window.location.href = "index.html";
-    }
-
-    document.getElementById("logoutBtn").addEventListener("click", () => {
-      localStorage.removeItem("lng_current_user");
-      window.location.href = "index.html";
-    });
-
-    // Welcome text
-    document.getElementById("welcomeTxt").textContent =
-      me ? `Logged in as ${email} — Phone: ${me.phone}` : `Logged in as ${email}`;
-
-    // Stats
-    function fmtMoney(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n); }
-    function renderStats() {
-      const db = getContribs();
-      const rows = (db[email] || []);
-      const totalCad = rows.reduce((sum, r) => sum + (Number(r.amountCAD)||0), 0);
-      document.getElementById("totalCad").textContent = fmtMoney(totalCad);
-      document.getElementById("totalCount").textContent = rows.length;
-    }
-
-    // Recent list
-    function renderRecent() {
-      const db = getContribs();
-      const rows = (db[email] || []).slice().reverse(); // newest first
-      const recent = rows.slice(0, 5);
-
-      const box = document.getElementById("recentList");
-      if (!recent.length) {
-        box.innerHTML = 'No contributions yet. <a href="contribute.html">Add one →</a>';
-        return;
-      }
-
-      let html = '<div style="overflow:auto;"><table class="simple">';
-      html += '<thead><tr>' +
-              '<th>Date</th>' +
-              '<th>Original</th>' +
-              '<th>In CAD</th>' +
-              '<th>Note</th>' +
-              '</tr></thead><tbody>';
-
-      recent.forEach(r => {
-        const d = new Date(r.at).toLocaleString();
-        html += `<tr>
-          <td>${d}</td>
-          <td>${fmtMoney(r.amountOriginal)} ${r.currency}</td>
-          <td>${fmtMoney(r.amountCAD)} CAD</td>
-          <td>${r.note || ""}</td>
-        </tr>`;
-      });
-
-      html += '</tbody></table></div>';
-      box.innerHTML = html;
-    }
-
-    renderStats();
-    renderRecent();
-  </script>
-</body>
-</html>
+      <a href="home.html" data-i18n="nav.home">Ahabanza</a>
+      <a href="about.html" data-i18n="nav.about">Ibyerekeye</a>
+      <a href="se
