--- a/about.html
+++ b/about.html
@@ -9,33 +9,24 @@
     .section { background:#fff; border:1px solid #eef1f7; border-radius:14px; padding:14px; margin-top:12px; }
     .kpi-grid { display:grid; gap:12px; grid-template-columns: repeat(auto-fit,minmax(160px,1fr)); }
     .kpi { background:#fff; border:1px solid #eef1f7; border-radius:12px; padding:12px; text-align:center; }
-    .timeline { border-left:3px solid #eef1f7; margin-left:6px; padding-left:12px; }
-    .timeline .item { margin:10px 0; }
-    .team { display:grid; gap:12px; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); }
-    .member { background:#fff; border:1px solid #eef1f7; border-radius:12px; padding:12px; }
-    .partner-logos { display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-    .partner-logos img { height:34px; object-fit:contain; }
-    .lang-switch { position:fixed; top:10px; right:10px; z-index:999; }
-    .lang-switch button { margin-left:4px; padding:4px 8px; }
+    .lang-select { padding:8px 10px; border-radius:8px; border:1px solid #d8deea; background:#fff; }
   </style>
 </head>
 <body>
-  <!-- Language Switch -->
-  <div class="lang-switch">
-    <button onclick="setLang('rw')">Kiny</button>
-    <button onclick="setLang('en')">Eng</button>
-    <button onclick="setLang('fr')">Fra</button>
-  </div>
-
   <!-- NAV -->
   <header class="nav">
-    <div class="nav-left">Les NGANYIRA</div>
+    <div class="nav-left" data-i18n="brand">Les NGANYIRA</div>
     <nav class="nav-right">
       <a href="home.html" data-i18n="nav.home">Ahabanza</a>
       <a href="about.html" data-i18n="nav.about">Ibyerekeye</a>
       <a href="services.html" data-i18n="nav.services">Serivisi</a>
       <a href="contribute.html" data-i18n="nav.contribute">Tanga umusanzu</a>
       <a href="terms.html" data-i18n="nav.terms">Amategeko & Politiki</a>
+      <select id="langSel" class="lang-select" title="Language">
+        <option value="rw">Kinyarwanda</option>
+        <option value="en">English</option>
+        <option value="fr">Français</option>
+      </select>
       <button id="logoutBtn" class="nav-btn" data-i18n="nav.logout">Sohoka</button>
     </nav>
   </header>
@@ -104,8 +95,7 @@
   <footer style="max-width:1100px;margin:16px auto 8px;padding:12px;background:#fff;border:1px solid #eef1f7;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.04);">
     <div style="display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between;">
       <div class="muted">
-        <b data-i18n="footer.brand">Umuryango Les NGANYIRA</b> · 
-        <span data-i18n="footer.where">Kigali n’ahandi hose</span>
+        <b data-i18n="footer.brand">Umuryango Les NGANYIRA</b> · <span data-i18n="footer.where">Kigali n’ahandi hose</span>
         <br/><small><span data-i18n="footer.email">Email</span>: example@lesnganyira.org · <span data-i18n="footer.phone">Tel</span>: +250 7xx xxx xxx</small>
       </div>
       <div>
@@ -116,32 +106,7 @@
   </footer>
 
   <script>
-    // Language data
-    const translations = {
-      rw: {
-        "about.story": "Umuryango Les NGANYIRA watangiye mu 1920. Papa mukuru, Nganyira, ari we watanze izina ry’umuryango, yashakanye na Mama mukuru Victoria Nganyira. Babyegetse abana umunani: Clemantine, Clement, Agnes, Louis na Louise, Immacule, Ngabire, na Jean Pierre. Umuryango wakuze utekereza gukora ikimina cyo guteranya amafaranga, hagamijwe kuzashora mu mishinga ikomeye izageza ku rubyaro n'abazabakomokaho."
-      },
-      en: {
-        "about.story": "The Les NGANYIRA family began in 1920. The patriarch, Nganyira, whose name the family bears, married the matriarch Victoria Nganyira. They had eight children: Clemantine, Clement, Agnes, Louis and Louise, Immacule, Ngabire, and Jean Pierre. Over time, the family decided to start a savings group to pool funds for major projects that would benefit children, grandchildren, and future generations."
-      },
-      fr: {
-        "about.story": "La famille Les NGANYIRA a vu le jour en 1920. Le patriarche, Nganyira, dont la famille porte le nom, a épousé la matriarche Victoria Nganyira. Ils ont eu huit enfants : Clemantine, Clement, Agnes, Louis et Louise, Immacule, Ngabire et Jean Pierre. Avec le temps, la famille a décidé de créer une tontine afin de réunir des fonds pour des projets majeurs qui profiteraient aux enfants, petits-enfants et aux générations futures."
-      }
-    };
-
-    function setLang(lang) {
-      document.querySelectorAll("[data-i18n]").forEach(el => {
-        const key = el.getAttribute("data-i18n");
-        let text = translations[lang]?.[key] || translations['rw']?.[key] || el.textContent;
-        if (text) el.textContent = text;
-      });
-      localStorage.setItem("site_lang", lang);
-    }
-
-    // Load preferred language
-    setLang(localStorage.getItem("site_lang") || "rw");
-
-    // Auth guard
+    // ===== Auth guard =====
     const email = localStorage.getItem("lng_current_user");
     if (!email) { window.location.href = "index.html"; }
     document.getElementById("logoutBtn").addEventListener("click", () => {
@@ -149,15 +114,97 @@
       window.location.href = "index.html";
     });
 
-    // Fill KPIs
+    // ===== Local stats fill from contributions =====
     function getContribs(){ try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; } }
     function fmt(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n); }
     const db = getContribs();
     const myRows = (db[email] || []);
     const totalCad = myRows.reduce((s,r)=>s+(Number(r.amountCAD)||0),0);
     document.getElementById("kpiTotal").textContent = fmt(totalCad);
-    document.getElementById("kpiMembers").textContent = "—";
-    document.getElementById("kpiProjects").textContent = "—";
+    document.getElementById("kpiMembers").textContent = "—";   // Shyiramo umubare nyawo niboneka
+    document.getElementById("kpiProjects").textContent = "—";  // Shyiramo umubare nyawo niboneka
+
+    // ===== Translations (RW/EN/FR) — keys zose ukoreshejwe =====
+    const TR = {
+      rw: {
+        brand:"Les NGANYIRA",
+        "about.title":"Les NGANYIRA — Ibyerekeye",
+        "nav.home":"Ahabanza","nav.about":"Ibyerekeye","nav.services":"Serivisi","nav.contribute":"Tanga umusanzu","nav.terms":"Amategeko & Politiki","nav.logout":"Sohoka",
+        "about.heading":"Ibyerekeye Umuryango Les NGANYIRA",
+        "about.subtitle":"Twiyemeje kuzigama, gufashanya no kubaka ejo hazaza heza hamwe.",
+        "about.missionTitle":"Intego n’Icyerekezo",
+        "about.missionLabel":"Intego:","about.missionText":"Guhuza imbaraga z’umuryango mu kwizigamira no gufashanya.",
+        "about.visionLabel":"Icyerekezo:","about.visionText":"Kuba umuryango uhamye wiyubakira iterambere binyuze mu bwizigame n’ubufatanye.",
+        "about.impactTitle":"Ibimenyetso by’ingaruka",
+        "about.members":"Abagize","about.total":"Umusanzu wose (CAD)","about.projects":"Imishinga y’ubufasha",
+        "about.storyTitle":"Amateka yacu",
+        "about.story":"Umuryango Les NGANYIRA watangiye mu 1920. Papa mukuru, Nganyira, ari we watanze izina ry’umuryango, yashakanye na Mama mukuru Victoria Nganyira. Babyegetse abana umunani: Clemantine, Clement, Agnes, Louis na Louise, Immacule, Ngabire, na Jean Pierre. Umuryango wakuze utekereza gukora ikimina cyo guteranya amafaranga, hagamijwe kuzashora mu mishinga ikomeye izageza ku rubyaro n'abazabakomokaho.",
+        "about.valuesTitle":"Indangagaciro",
+        "about.value1":"Ubumwe n’Ubwuzuzanye","about.value2":"Ukwizigamira n’Ubunyangamugayo","about.value3":"Gufashanya no Kwita ku muntu","about.value4":"Gutangiza no Gukorera mu mucyo",
+        "about.contactTitle":"Twandikire",
+        "about.contactEmail":"Email","about.contactPhone":"Tel",
+        "about.contactContribute":"Tanga umusanzu","about.contactServices":"Reba serivisi",
+        "footer.brand":"Umuryango Les NGANYIRA","footer.where":"Kigali n’ahandi hose","footer.email":"Email","footer.phone":"Tel","footer.terms":"Amategeko & Politiki","footer.contribute":"Tanga umusanzu"
+      },
+      en: {
+        brand:"Les NGANYIRA",
+        "about.title":"Les NGANYIRA — About",
+        "nav.home":"Home","nav.about":"About","nav.services":"Services","nav.contribute":"Make a Contribution","nav.terms":"Terms & Policies","nav.logout":"Log out",
+        "about.heading":"About the Les NGANYIRA Family",
+        "about.subtitle":"We commit to saving, supporting one another, and building a brighter future together.",
+        "about.missionTitle":"Mission & Vision",
+        "about.missionLabel":"Mission:","about.missionText":"Bring the family together through savings and mutual support.",
+        "about.visionLabel":"Vision:","about.visionText":"A resilient family, building prosperity through thrift and cooperation.",
+        "about.impactTitle":"Impact in numbers",
+        "about.members":"Members","about.total":"Total contributions (CAD)","about.projects":"Support projects",
+        "about.storyTitle":"Our Story",
+        "about.story":"The Les NGANYIRA family began in 1920. The patriarch, Nganyira—after whom the family is named—married the matriarch Victoria Nganyira. They raised eight children: Clemantine, Clement, Agnes, Louis and Louise, Immacule, Ngabire, and Jean Pierre. As the family grew, they started a savings circle to pool funds for major projects that would benefit children, grandchildren, and the generations to come.",
+        "about.valuesTitle":"Values",
+        "about.value1":"Unity & Complementarity","about.value2":"Thrift & Integrity","about.value3":"Mutual Aid & Care","about.value4":"Initiative & Transparency",
+        "about.contactTitle":"Contact us",
+        "about.contactEmail":"Email","about.contactPhone":"Phone",
+        "about.contactContribute":"Make a Contribution","about.contactServices":"See Services",
+        "footer.brand":"Les NGANYIRA Family","footer.where":"Kigali & worldwide","footer.email":"Email","footer.phone":"Phone","footer.terms":"Terms & Policies","footer.contribute":"Contribute"
+      },
+      fr: {
+        brand:"Les NGANYIRA",
+        "about.title":"Les NGANYIRA — À propos",
+        "nav.home":"Accueil","nav.about":"À propos","nav.services":"Services","nav.contribute":"Faire une contribution","nav.terms":"Conditions & Politiques","nav.logout":"Déconnexion",
+        "about.heading":"À propos de la famille Les NGANYIRA",
+        "about.subtitle":"Nous nous engageons à épargner, à nous entraider et à bâtir ensemble un avenir meilleur.",
+        "about.missionTitle":"Mission & Vision",
+        "about.missionLabel":"Mission :","about.missionText":"Rassembler la famille par l’épargne et l’entraide.",
+        "about.visionLabel":"Vision :","about.visionText":"Une famille résiliente, bâtissant la prospérité par l’épargne et la coopération.",
+        "about.impactTitle":"Impact en chiffres",
+        "about.members":"Membres","about.total":"Total des contributions (CAD)","about.projects":"Projets d’appui",
+        "about.storyTitle":"Notre histoire",
+        "about.story":"La famille Les NGANYIRA est née en 1920. Le patriarche, Nganyira—dont la famille porte le nom—épousa la matriarche Victoria Nganyira. Ils ont élevé huit enfants : Clemantine, Clement, Agnes, Louis et Louise, Immacule, Ngabire et Jean Pierre. À mesure que la famille grandissait, elle lança une tontine afin de réunir des fonds pour des projets majeurs au bénéfice des enfants, petits-enfants et des générations futures.",
+        "about.valuesTitle":"Valeurs",
+        "about.value1":"Unité & Complémentarité","about.value2":"Épargne & Intégrité","about.value3":"Entraide & Bienveillance","about.value4":"Initiative & Transparence",
+        "about.contactTitle":"Contactez-nous",
+        "about.contactEmail":"Email","about.contactPhone":"Tél.",
+        "about.contactContribute":"Contribuer","about.contactServices":"Voir les services",
+        "footer.brand":"Famille Les NGANYIRA","footer.where":"Kigali & dans le monde","footer.email":"Email","footer.phone":"Tél.","footer.terms":"Conditions & Politiques","footer.contribute":"Contribuer"
+      }
+    };
+
+    function applyLang(lang){
+      const dict = TR[lang] || TR.rw;
+      document.querySelectorAll("[data-i18n]").forEach(el=>{
+        const key = el.getAttribute("data-i18n");
+        if (dict[key]) el.textContent = dict[key];
+      });
+      document.title = dict["about.title"] || "Les NGANYIRA — About";
+      document.documentElement.setAttribute("lang", lang);
+      localStorage.setItem("lng_lang", lang);
+    }
+
+    // Load preferred language + hook dropdown
+    const langSel = document.getElementById("langSel");
+    const savedLang = localStorage.getItem("lng_lang") || "rw";
+    langSel.value = savedLang;
+    applyLang(savedLang);
+    langSel.addEventListener("change", ()=> applyLang(langSel.value));
   </script>
 </body>
 </html>
